fix(css): fix hyphens display issue on firefox

--- a/src/css/block/example/_variation.scss
+++ b/src/css/block/example/_variation.scss
@@ -82,7 +82,6 @@ Style guide: kss-example.variation
         content: "-";
         position: absolute;
         inset: 0 auto 0 0;
-        margin: auto 0;
       }
 
       h1,
